# joy

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  build.rs  build.sh  flake.nix  glue.sh  publish.sh  run-cli.sh  run-web.sh  tests.sh  watch.sh
.github/workflows/: CI_native.yml  CI_nix.yml  tests.yml
CI/: all_tests.sh
benchmarks/jsframework/: HISTORY.md  README.md  history.jsonl  memcheck.mjs  render.mjs  run.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: lib.rs
crates/roc/: Cargo.toml  build.rs
crates/roc/src/: glue.rs  lib.rs
crates/web/: Cargo.toml
crates/web/src/: bench.rs  console.rs  lib.rs  model.rs
examples/: click.roc  counter.roc  counters.roc  events_input.roc  flags.roc  hello.roc  http.roc  inner_html.roc  navigation.roc  ports.roc
platform/: Action.roc  Console.roc  Crypto.roc  DOM.roc  Dom.roc  Effect.roc  Elem.roc  File.roc  Host.roc  Html.roc  Http.roc  InnerHtml.roc  Keyboard.roc  Time.roc  Url.roc  glue.roc  main.roc
src/: glue.rs  lib.rs  model.rs  pdom.rs  roc.rs
tests/: run.roc
tests/apps/bench/: index.html  main.roc
tests/apps/crypto/: index.html  main.roc
tests/apps/dom/: index.html  main.roc
tests/apps/file/: index.html  main.roc
tests/apps/http/: index.html  main.roc
tests/apps/keyboard/: index.html  main.roc
tests/apps/time/: index.html  main.roc
tests/apps/vdom/: index.html  main.roc
tests/bench/: README.md  baseline.json  bench.sh  driver.roc
tests/crypto/: test_hash_deterministic.roc  test_hash_empty_file.roc  test_hash_exact_boundary.roc  test_hash_file_chunks.roc  test_hash_invalid_file_id.roc  test_hash_known_value.roc  test_hash_one_byte_over.roc  test_hash_sequential.roc  test_hash_sha256.roc  test_hash_single_chunk.roc  test_hash_use_all_cores.roc
tests/dom/: test_close_modal.roc  test_navigate.roc  test_navigate_to_missing.roc  test_push_url.roc  test_replace_url.roc  test_show_modal.roc
tests/file/: test_read_at_offset.roc  test_read_head_clamps.roc  test_read_invalid_file_id.roc
tests/http/: test_get.roc  test_get_error_500.roc  test_post_body.roc  test_post_empty_body.roc  test_post_file.roc  test_post_file_invalid_id.roc  test_post_file_slice.roc  test_put_body.roc  test_put_file_slice.roc  test_put_file_whole.roc
tests/keyboard/: test_global_listener.roc  test_key_filter.roc
tests/server/: main.roc
tests/time/: test_after_fires_once.roc  test_cancel_after.roc  test_cancel_stops_timer.roc  test_debounce_resets.roc  test_every_fires_repeatedly.roc  test_now_returns_current_time.roc
tests/vdom/: README.md  fuzz.roc  leak.roc
www/: index.html
