[workspace]
members = ["crates/cli", "crates/helpers", "crates/web", "crates/roc"]

resolver = "2"

[workspace.package]
authors = ["The Joy Contributors"]
description = "A framework for building full-stack web apps in Roc"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/niclas-ahden/joy"
version = "0.0.1"
