[package]
name = "roc"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true

[dependencies]
roc_std = { git = "https://github.com/roc-lang/roc.git" }
wee_alloc = "0.4.5"

[build-dependencies]
helpers = { path = "../helpers" }
