[package]
name = "web"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
# We use this version to get hydration
percy-dom = { git = "https://github.com/niclas-ahden/percy", branch = "master", default-features = false }
# percy-dom = { version = "0.10.0", default-features = false }
# percy-dom = { path = "../../../../percy/crates/percy-dom", default-features = false }
reqwest = { version = "0.12.9" }
roc = { path = "../roc" }
roc_std = { workspace = true}
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wee_alloc = "0.4.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[dependencies.web-sys]
version = "0.3.72"
features = [
  "Document",
  "Element",
  "HtmlDialogElement",
  "HtmlElement",
  "HtmlSelectElement",
  "IntersectionObserver",
  "KeyboardEvent",
  "Node",
  "Touch",
  "TouchEvent",
  "TouchList",
  "Window",
  "console",
]

[build-dependencies]
build-target = "0.4"
