[package]
name = "web"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
# Enable end-to-end performance instrumentation of the update cycle (see src/bench.rs).
# Off by default so normal builds carry zero overhead.
joy_bench = []

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.72"
# Our fork carries hydration plus the vdom performance work.
percy-dom = { git = "https://github.com/niclas-ahden/percy", branch = "master", default-features = false }
# For local percy development:
# percy-dom = { path = "../../../percy/crates/percy-dom", default-features = false }
roc = { path = "../roc" }
roc_std = { workspace = true}
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[dependencies.web-sys]
version = "0.3.72"
features = [
  "Document",
  "Element",
  "HtmlDialogElement",
  "HtmlElement",
  "HtmlSelectElement",
  "History",
  "IntersectionObserver",
  "KeyboardEvent",
  "Location",
  "Node",
  "Performance",
  "Touch",
  "TouchEvent",
  "TouchList",
  "Window",
  "console",
  "Blob",
  "File",
  "FileList",
  "HtmlInputElement",
  "Crypto",
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "SubtleCrypto",
]

[build-dependencies]
build-target = "0.4"

# wasm-pack post-processing: optimize for size (default is -O, speed). Measured to
# cost nothing on CPU while shrinking the bundle.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
